--- a/model_notebooks/k-means.ipynb
+++ b/model_notebooks/k-means.ipynb
@@ -102,9 +102,10 @@
    "metadata": {},
    "source": [
     "## Functions directly used by the kMeans Model\n",
-    "### Now we are going to define four functions that are directly used by the kmeans model.\n",
     "\n",
-    "First we need to be able to initialize the models centroids. This will be done using random initialization. This random Initialization will use the minimum and maximum of each column and generate a random number between them. There are other ways to initialize the centroids and some methods are better than others. For example in scikit-learn implements a \"k-means++\" initialization which is \"based on an empirical probability distribution of the points’ contribution to the overall inertia\"(sklearn-documentation). The simple random initialization we use here is much simpler but can sometimes get stuck if it ends up exactly between clusters."
+    "First we need to be able to initialize the models centroids. This will be done using random initialization. The first random initialization will use the minimum and maximum of each column and generate a random number between them. The second chooses a random selection from each feature for every centroid. finally the third randomly chooses points from the data to use as cluster centers. This is done without replacement to avoid duplicate points being selected. This implementation is not ideal for data that is highly spatially dense as if it is then there is a higher chance that the selected centroids are members of the same cluster. \n",
+    "\n",
+    "There are other ways to initialize the centroids and some methods are better than others. For example in scikit-learn implements a \"k-means++\" initialization which is \"based on an empirical probability distribution of the points’ contribution to the overall inertia\"(sklearn-documentation). The simple random initialization we use here is much simpler but can sometimes get stuck if it ends up exactly between clusters."
    ]
   },
   {
